<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="250dp" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="18dp"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="18dp"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintStart_toStartOf="parent"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_account_btn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_account_btn"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/dont_have_an_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/login_account_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_to_register"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/dont_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:text="@string/sign_up" />


</androidx.constraintlayout.widget.ConstraintLayout>