<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="250dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/design_default_color_error"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/primary_color"
        app:boxStrokeErrorColor="@color/design_default_color_error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/design_default_color_error"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/email_container"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/primary_color"
        app:boxStrokeErrorColor="@color/design_default_color_error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/design_default_color_error"

        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/password_container"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/primary_color"
        app:boxStrokeErrorColor="@color/design_default_color_error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwords_do_not_match"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_container"
        app:layout_constraintStart_toStartOf="@id/confirm_password_container"
        android:layout_marginTop="8dp" />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_btn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/create_account"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_container"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/signUpLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_account_btn"
        android:visibility="gone"/>
    
    <TextView
        android:id="@+id/already_have_an_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/create_account_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_to_login"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/already_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:text="@string/sign_in" />


</androidx.constraintlayout.widget.ConstraintLayout>